MellowPlayer.Connect integration: windows support
#332

--- a/src/lib/infrastructure/CMakeLists.txt
+++ b/src/lib/infrastructure/CMakeLists.txt
@@ -11,6 +11,7 @@ configure_file(resources/PluginTemplate/theme.json ${CMAKE_CURRENT_BINARY_DIR}/r
 configure_file(resources/PluginTemplate/logo.svg ${CMAKE_CURRENT_BINARY_DIR}/resources/PluginTemplate/logo.svg)
 configure_file(resources/images/mellowplayer-connect.svg ${CMAKE_CURRENT_BINARY_DIR}/resources/images/mellowplayer-connect.svg)
 configure_file(resources/scripts/install-mellowplayer-connect.sh ${CMAKE_CURRENT_BINARY_DIR}/resources/scripts/install-mellowplayer-connect.sh)
+configure_file(resources/scripts/install-mellowplayer-connect.ps1 ${CMAKE_CURRENT_BINARY_DIR}/resources/scripts/install-mellowplayer-connect.ps1)
 
 configure_file(src/MellowPlayer/Infrastructure/BuildConfig.cpp.in ${CMAKE_BINARY_DIR}/BuildConfig.cpp)
 
