--- a/scripts/settings/SettingsTranslator.js.in
+++ b/scripts/settings/SettingsTranslator.js.in
@@ -25,6 +25,7 @@ function translateCategory(category) {
     var translations = {
         "Streaming Services": qsTr("Streaming Services"),
         "Cache": qsTr("Cache"),
+        "Remote Control": qsTr("Remote Control"),
 %(categories)s
     };
 
