Update PocketCasts plugin for their latest web player

--- a/src/plugins/pocketcasts/metadata.ini
+++ b/src/plugins/pocketcasts/metadata.ini
@@ -1,7 +1,7 @@
-author=Lukas Kolletzki
-author_website=https://github.com/kolletzki
+author=Hig Hurtenflurst
+author_website=https://gitlab.com/highurtenflurst
 icon=logo.svg
-name=Pocket Casts
-supported_platforms=Linux-Windows
+name=PocketCasts
+supported_platforms=All
 url=https://play.pocketcasts.com/
 version=1.0
