--- a/src/main/share/metainfo/com.gitlab.ColinDuquesnoy.MellowPlayer.metainfo.xml.in
+++ b/src/main/share/metainfo/com.gitlab.ColinDuquesnoy.MellowPlayer.metainfo.xml.in
@@ -2,9 +2,14 @@
 <component type="desktop">
     <id>mellowplayer.desktop</id>
     <metadata_license>CC0-1.0</metadata_license>
-    <project_license>GPLv2</project_license>
+    <project_license>GPL-2.0-only</project_license>
     <name>MellowPlayer</name>
     <summary>Cloud music integration for your desktop</summary>
+    <content_rating type="oars-1.1" />
+    <releases>
+        <release version="@PROJECT_VERSION@" date="@_date@" urgency="high">
+        </release>
+    </releases>
     <description>
         <p>
             MellowPlayer is a free, open source and cross-platform desktop application that
