--- a/src/3rdparty/libqxt/CMakeLists.txt
+++ b/src/3rdparty/libqxt/CMakeLists.txt
@@ -6,11 +6,11 @@ elseif(APPLE)
 elseif(UNIX)
     set(SOURCE_FILES ${SOURCE_FILES} src/widgets/x11/qxtglobalshortcut_x11.cpp)
 endif()
-add_definitions(-DBUILD_QXT_CORE -DBUILD_QXT_GUI -DQXT_STATIC)
 add_library(qxtglobalshortcut STATIC ${SOURCE_FILES})
 target_link_libraries(qxtglobalshortcut Qt5::Core Qt5::Widgets)
 target_include_directories(qxtglobalshortcut PUBLIC src/core src/widgets/)
 target_include_directories(qxtglobalshortcut PRIVATE ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
+target_compile_definitions(qxtglobalshortcut PRIVATE -DBUILD_QXT_CORE -DBUILD_QXT_GUI -DQXT_STATIC)
 if(UNIX)
     find_package(X11)
     target_link_libraries(qxtglobalshortcut ${X11_LIBRARIES})
