--- a/src/lib/application/CMakeLists.txt
+++ b/src/lib/application/CMakeLists.txt
@@ -6,4 +6,8 @@ file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS src/*.hpp)
 add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 target_precompile_headers(${LIB_NAME} REUSE_FROM ${PROJECT_NAME}.Domain)
 target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_include_directories(${LIB_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/src/3rdparty)
+if(USE_LIBNOTIFY)
+    target_compile_definitions(${LIB_NAME} PUBLIC -DUSE_LIBNOTIFY)
+endif()
 target_link_libraries(${LIB_NAME} PUBLIC Qt5::Core Qt5::Gui ${PROJECT_NAME}.Domain ${PROJECT_NAME}.Infrastructure ${PROJECT_NAME}.Presentation)
