--- a/src/tests/lib/CMakeLists.txt
+++ b/src/tests/lib/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(${LIB_NAME}
         qxtglobalshortcut)
 target_precompile_headers(${LIB_NAME} PUBLIC stdafx.h)
 target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src/tests)
+target_include_directories(${LIB_NAME} SYSTEM PRIVATE
+        ${CMAKE_SOURCE_DIR}/src/3rdparty
+        ${CMAKE_SOURCE_DIR}/src/3rdparty/catch
+        ${CMAKE_SOURCE_DIR}/src/3rdparty/fakeit)
