#464 Technical stack update
Try to find failing integration test

--- a/scripts/ci/linux/build-image/Dockerfile
+++ b/scripts/ci/linux/build-image/Dockerfile
@@ -7,3 +7,4 @@ RUN sudo chmod +x /env-setup.sh
 RUN /env-setup.sh
 RUN sudo apt -y install lcov
 RUN sudo dbus-uuidgen --ensure=/etc/machine-id
+RUN sudo apt -y install libqt5sql5-sqlite
