#464 Technical stack update
Use Catch2 (via cmake FetchContent)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,5 +56,6 @@ add_subdirectory(src/main)
 add_subdirectory(src/plugins)
 if(BUILD_TESTS)
     enable_testing()
+    include(${CMAKE_BINARY_DIR}/_deps/catch2-src/contrib/Catch.cmake)
     add_subdirectory(src/tests)
 endif()
