--- a/src/tests/lib/CMakeLists.txt
+++ b/src/tests/lib/CMakeLists.txt
@@ -5,12 +5,12 @@ file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS *.hpp)
 
 add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(${LIB_NAME}
-        MellowPlayer.Domain MellowPlayer.Presentation MellowPlayer.Infrastructure
+        MellowPlayer.Domain
+        MellowPlayer.Presentation
+        MellowPlayer.Infrastructure
+        Catch2::Catch2
         Qt5::Concurrent Qt5::Core Qt5::Gui Qt5::Network Qt5::Qml Qt5::Quick Qt5::QuickControls2
         Qt5::Sql Qt5::Svg Qt5::WebEngine Qt5::WebEngineWidgets Qt5::Widgets Qt5::Test
         qxtglobalshortcut)
 target_precompile_headers(${LIB_NAME} PUBLIC stdafx.h)
 target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/src/tests)
-target_include_directories(${LIB_NAME} SYSTEM PRIVATE
-        ${CMAKE_SOURCE_DIR}/src/3rdparty
-        ${CMAKE_SOURCE_DIR}/src/3rdparty/catch)
