#464 Technical stack update
Update CI build image

--- a/scripts/ci/linux/build-image/Dockerfile
+++ b/scripts/ci/linux/build-image/Dockerfile
@@ -8,3 +8,4 @@ RUN /env-setup.sh
 RUN sudo apt -y install lcov
 RUN sudo dbus-uuidgen --ensure=/etc/machine-id
 RUN sudo apt -y install libqt5sql5-sqlite
+RUN sudo apt -y install git
