Switch to qxtglobalshortcut to qhotkey.cmake
And use FetchContent to retrieve it

--- a/scripts/ci/linux/build-image/Dockerfile
+++ b/scripts/ci/linux/build-image/Dockerfile
@@ -9,3 +9,4 @@ RUN sudo apt -y install lcov
 RUN sudo dbus-uuidgen --ensure=/etc/machine-id
 RUN sudo apt -y install libqt5sql5-sqlite
 RUN sudo apt -y install git
+RUN sudo apt -y install libqt5x11extras5-dev
