--- a/src/lib/presentation/CMakeLists.txt
+++ b/src/lib/presentation/CMakeLists.txt
@@ -25,8 +25,8 @@ endif()
 add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES} ${QRC_FILES} ${CONF_FILES})
 target_precompile_headers(${LIB_NAME} REUSE_FROM ${PROJECT_NAME}.Domain)
 target_link_libraries(${LIB_NAME} ${PROJECT_NAME}.Domain ${PROJECT_NAME}.Infrastructure
-                      Qt5::Core Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Svg
-                      Qt5::WebEngine Qt5::WebEngineWidgets Qt5::Widgets qxtglobalshortcut)
+                      qhotkey Qt5::Core Qt5::Qml Qt5::Quick Qt5::QuickControls2 Qt5::Svg
+                      Qt5::WebEngine Qt5::WebEngineWidgets Qt5::Widgets)
 target_include_directories(${LIB_NAME} PUBLIC src)
 if(USE_LIBNOTIFY)
     target_include_directories(${LIB_NAME} SYSTEM PRIVATE ${LIBNOTIFY_INCLUDE_DIRS})
