--- a/src/tests/lib/CMakeLists.txt
+++ b/src/tests/lib/CMakeLists.txt
@@ -11,6 +11,6 @@ target_link_libraries(${LIB_NAME}
         Catch2::Catch2
         Qt5::Concurrent Qt5::Core Qt5::Gui Qt5::Network Qt5::Qml Qt5::Quick Qt5::QuickControls2
         Qt5::Sql Qt5::Svg Qt5::WebEngine Qt5::WebEngineWidgets Qt5::Widgets Qt5::Test
-        qxtglobalshortcut)
+        qhotkey)
 target_precompile_headers(${LIB_NAME} PUBLIC stdafx.h)
 target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
