Allow to skip FetchContent by looking first into system packages
Fix for being able to build our flatpak

--- a/src/main/CMakeLists.txt
+++ b/src/main/CMakeLists.txt
@@ -30,10 +30,15 @@ target_link_libraries(${PROJECT_NAME}
         MellowPlayer.Presentation
         MellowPlayer.Infrastructure
         MellowPlayer.Application
-        Boost.DI
         Qt5::Concurrent Qt5::Core Qt5::Gui Qt5::Network Qt5::Qml Qt5::Quick Qt5::QuickControls2
         Qt5::Sql Qt5::Svg Qt5::WebEngine Qt5::WebEngineWidgets Qt5::Widgets Qt5::WebChannel qhotkey)
 target_compile_definitions(${PROJECT_NAME} PRIVATE -DBUILD_QXT_CORE -DBUILD_QXT_GUI -DQXT_STATIC)
+
+if (SYSTEM_BOOST_DI_FOUND)
+    target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${BOOST_DI_INCLUDEDIR})
+else()
+    target_link_libraries(${PROJECT_NAME} Boost.DI)
+endif()
 
 if (APPLE)
     add_framework(Carbon ${PROJECT_NAME})
