--- a/src/lib/application/CMakeLists.txt
+++ b/src/lib/application/CMakeLists.txt
@@ -9,4 +9,7 @@ target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 if(USE_LIBNOTIFY)
     target_compile_definitions(${LIB_NAME} PUBLIC -DUSE_LIBNOTIFY)
 endif()
-target_link_libraries(${LIB_NAME} PUBLIC Boost.DI Qt5::Core Qt5::Gui ${PROJECT_NAME}.Domain ${PROJECT_NAME}.Infrastructure ${PROJECT_NAME}.Presentation)
+target_link_libraries(${LIB_NAME} PUBLIC Qt5::Core Qt5::Gui ${PROJECT_NAME}.Domain ${PROJECT_NAME}.Infrastructure ${PROJECT_NAME}.Presentation)
+if ( NOT SYSTEM_BOOST_DI_FOUND )
+    target_link_libraries(${LIB_NAME} PUBLIC Boost.DI)
+endif()
