#464 Technical stack update
Use QtQuickCompiler by default and add an option to run qmllint during build (e.g. on CI)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
 
-project(MellowPlayer)
-
 set(VERSION_MAJOR 3)
 set(VERSION_MINOR 7)
 set(VERSION_PATCH 0)
@@ -23,6 +21,7 @@ endif()
 
 project(MellowPlayer VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}.${VERSION_TWEAK}")
 
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/ ${CMAKE_MODULE_PATH})
 message(STATUS "Building MellowPlayer version ${PROJECT_VERSION}")
 
 set(SOURCE_DIR ${CMAKE_SOURCE_DIR})
@@ -34,11 +33,12 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel." FORCE)
 endif(NOT CMAKE_BUILD_TYPE)
 set_option(BUILD_TESTS OFF BOOL "TRUE to build the tests, FALSE to ignore them.")
+set_option(ENABLE_QUICK_COMPILER ON BOOL "TRUE to compile qml files ahead of time, FALSE to skip ahead of time compilation. Default is ON")
+set_option(ENABLE_QML_LINT OFF BOOL "TRUE to check qml file syntax, FALSE to skip check. Default is FALSE")
 set_option(ENABLE_COVERAGE OFF BOOL "True to build code coverage targerts")
 set_option(ENABLE_LCOV_REPORT OFF BOOL "True to enable lcov coverage report. Default is False.")
 set_option(STATIC_LIBSTDCPP OFF BOOL "True to link statically with libstdc++ and libgcc")
 set_option(DEFAULT_THEME "Adaptive" STRING "The default theme (available: Default, Midna, MidnaDark, Breeze, BreezeDark, Deezer, Spotify,...)")
-set_option(CHECK_QML_SYNTAX ON BOOL "Whether to check for QML/Javascript syntax errors. Default is ON")
 if (UNIX)
     set_option(USE_LD_GOLD ON BOOL "Use GNU gold linker")
 endif()
