#464 Technical stack update
Use shared libraries on Linux in order to be able to create a dumpable qml plugin whose qmltypes can be used to validate unqualified usages in qmllint 5.15

--- a/src/lib/domain/CMakeLists.txt
+++ b/src/lib/domain/CMakeLists.txt
@@ -3,7 +3,17 @@ set(LIB_NAME "${PROJECT_NAME}.Domain")
 file(GLOB_RECURSE SOURCE_FILES CONFIGURE_DEPENDS src/*.cpp)
 file(GLOB_RECURSE HEADER_FILES CONFIGURE_DEPENDS src/*.hpp)
 
-add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
+if (MSVC_COMPILER)
+    add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
+else()
+    add_library(${LIB_NAME} SHARED ${SOURCE_FILES} ${HEADER_FILES})
+    set_target_properties(${LIB_NAME} PROPERTIES DEFINE_SYMBOL "" )
+    install(TARGETS ${LIB_NAME}
+            BUNDLE DESTINATION MacOS
+            RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+            LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+            ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/static)
+endif()
 target_precompile_headers(${LIB_NAME} PUBLIC src/stdafx.h)
 target_include_directories(${LIB_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(${LIB_NAME} Qt5::Core Qt5::Gui)
