--- a/src/plugins/youtube/settings.json
+++ b/src/plugins/youtube/settings.json
@@ -7,7 +7,7 @@
         "key": "muteAds"
     },
     {
-        "name": "Automatically skip adds",
+        "name": "Automatically skip ads",
         "tooltip": "Automatically skip ads after 5 seconds",
         "type": "bool",
         "default": false,
